--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,5 +11,12 @@
                   Environments with Active Measuring},
   journal      = {CoRR},
   volume       = {abs/2303.08271},
-  year         = {2023}
+  year         = {2023},
+  url          = {https://doi.org/10.48550/arXiv.2303.08271},
+  doi          = {10.48550/arXiv.2303.08271},
+  eprinttype    = {arXiv},
+  eprint       = {2303.08271},
+  timestamp    = {Mon, 20 Mar 2023 15:23:19 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2303-08271.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
