Added code repo ATM paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,19 +4,17 @@
 @string{aps = {American Physical Society,}}
 
 @article{DBLP:journals/corr/abs-2303-08271,
-  author       = {Merlijn Krale and
-                  Thiago D. Sim{\~{a}}o and
-                  Nils Jansen},
-  title        = {Act-Then-Measure: Reinforcement Learning for Partially Observable
-                  Environments with Active Measuring},
-  journal      = {CoRR},
-  volume       = {abs/2303.08271},
-  year         = {2023},
-  url          = {https://doi.org/10.48550/arXiv.2303.08271},
-  doi          = {10.48550/arXiv.2303.08271},
-  eprinttype    = {arXiv},
-  eprint       = {2303.08271},
-  timestamp    = {Mon, 20 Mar 2023 15:23:19 +0100},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-2303-08271.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+    title        = {{Act-Then-Measure: Reinforcement Learning for Partially Observable Environments with Active Measuring}},
+    author       = {
+        Merlijn Krale and
+        Thiago D. Sim{\~a}o and 
+        Nils Jansen
+    },
+    year         = {2023},
+    booktitle    = {{ICAPS}},
+    url          = {https://arxiv.org/abs/2303.08271},
+    arxiv        = {2303.08271},
+    abbr         = {ICAPS},
+    bibtex_show  = {true},
+    code         = {https://github.com/LAVA-LAB/ATM}
 }
