--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,5 +16,5 @@
     arxiv        = {2303.08271},
     abbr         = {ICAPS},
     bibtex_show  = {true},
-    code         = {https://github.com/LAVA-LAB/ATM}
+    code         = {https://github.com/LAVA-LAB/ATM},
 }
