Add master thesis to publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,3 +18,13 @@
     bibtex_show  = {true},
     code         = {https://github.com/LAVA-LAB/ATM},
 }
+
+@article{MasterThesis,
+    author      = {Merlijn Krale},
+    title       = {Active Measuring in Uncertain Environments},
+    journal     = {Master Thesis},
+    abbr        = {Thesis},
+    bibtex_show = {true},
+    pdf         = {Master_Thesis_Merlijn_Krale.pdf},
+    year        = {2023}
+}
