--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,6 +25,6 @@
     journal     = {Master Thesis},
     abbr        = {Thesis},
     bibtex_show = {true},
-    pdf         = {Master_Thesis_Merlijn_Krale.pdf},
+    pdf         = {Master_Thesis.pdf},
     year        = {2023}
 }
