Added AAAI publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,16 +3,28 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{DBLP:journals/corr/abs-2303-08271,
-    title        = {{Act-Then-Measure: Reinforcement Learning for Partially Observable Environments with Active Measuring}},
-    author       = {
-        Merlijn Krale and
-        Thiago D. Sim{\~a}o and 
-        Nils Jansen
-    },
-    year         = {2023},
-    booktitle    = {{ICAPS}},
-    url          = {https://arxiv.org/abs/2303.08271},
+@inproceedings{Krale2024Robust,
+  author    = { Merlijn Krale and
+                Thiago D. Sim{\~{a}}o and
+                Jana Tumova and
+               Nils Jansen},
+  title     = {Robust Active Measuring under Model Uncertainty},
+  booktitle = {{AAAI}},
+  year      = {2024},
+  abbr         = {AAAI},
+  bibtex_show  = {true}
+}
+
+@inproceedings{DBLP:conf/aips/KraleS023,
+  author       = {Merlijn Krale and
+                  Thiago D. Sim{\~{a}}o and
+                  Nils Jansen},
+  title        = {Act-Then-Measure: Reinforcement Learning for Partially Observable
+                  Environments with Active Measuring},
+  booktitle    = {{ICAPS}},
+  pages        = {212--220},
+  publisher    = {{AAAI} Press},
+  year         = {2023},
     arxiv        = {2303.08271},
     abbr         = {ICAPS},
     bibtex_show  = {true},
