--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,22 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{Krale2025Tighter,
+  title        = {{Tighter Value-Function Approximations for POMDPs}},
+  author       = {
+      Merlijn Krale and
+      Wietze Koops and
+      Sebastian Junges
+      Thiago D. Sim{\~{a}}o and
+      Nils Jansen
+  },
+  year         = {2025},
+  booktitle      = {International Conference on Autonomous and Multiagent Systems},
+  abbr          = {AAMAS},
+  bibtex_show   = {true},
+  keywords = {reviewed,conference}
+}
+
 @inproceedings{Krale2024Robust,
   author    = { Merlijn Krale and
                 Thiago D. Sim{\~{a}}o and
@@ -11,6 +27,9 @@
   title     = {Robust Active Measuring under Model Uncertainty},
   booktitle = {{AAAI}},
   year      = {2024},
+  arxiv        = {2312.11227},
+  pdf      = {https://ojs.aaai.org/index.php/AAAI/article/view/30122/31984},
+  code      = {https://github.com/MKrale/ATM},
   abbr         = {AAAI},
   bibtex_show  = {true}
 }
